# cast-mesh

./: .gitignore  Cargo.toml  README.md  build.rs
cast-mesh-client/: .gitignore  Cargo.toml  build.rs
cast-mesh-client/src/: cors.rs  main.rs  registration.rs
cast-mesh-client/src/routes/: mod.rs
cast-mesh-core/: build.gradle  settings.gradle
cast-mesh-core/gradle/wrapper/: gradle-wrapper.properties
cast-mesh-core/src/main/proto/: pingpong.proto  registration.proto
cast-mesh-rs/: Cargo.toml  build.rs
cast-mesh-rs/src/: main.rs  pingpong.rs
cast-mesh-server/: Cargo.toml  build.rs  data.db
cast-mesh-server/proto/: counter.proto
cast-mesh-server/src/: bin.rs  lib.rs  types.rs
cast-mesh-ui/: build.gradle  settings.gradle
cast-mesh-ui/gradle/wrapper/: gradle-wrapper.properties
cast-mesh-ui/src/main/java/com/tylerlowrey/grpc/device/data/: DataCollectionProto.java
cast-mesh-ui/src/main/java/com/tylerlowrey/grpc/device/registration/: DeviceRegistrationProto.java
cast-mesh-ui/src/main/java/pingpong/: Pingpong.java
cast-mesh-ui/src/main/kotlin/: Application.kt  MainController.kt
cast-mesh-ui/src/main/kotlin/com/tylerlowrey/views/: MainView.kt
cast-mesh-ui/src/main/kotlin/views/: MainView.kt
cast-mesh-ui/src/main/proto/: devicedata.proto  registration.proto
cast-mesh-web-ui/: .gitignore  Cargo.toml
cast-mesh-web-ui/src/: App.js  cors.rs  index.css  lib.rs  main.rs  types.rs
cast-mesh-web-ui/src/components/: DeviceDataDisplay.js  DeviceList.js  DeviceRegistration.js  useFetch.js
cast-mesh-web-ui/src/styles/: DeviceList.css  DeviceRegistration.css  style.css
cast-mesh-web-ui/webapp/: package-lock.json  package.json
cast-mesh-web-ui/webapp/public/: index.html
cast-mesh-web-ui/webapp/src/: constants.js
cast-mesh-web-ui/webapp/src/components/: DeviceDataDisplay.js  DeviceList.js
cast-mesh-web-ui/webapp/src/styles/: DeviceDataDisplay.css  DeviceList.css  DeviceRegistration.css
