[package]
name = "cast-mesh-server"
version = "0.1.0"
authors = ["tylerlowrey <contact@tylerlowrey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cast_mesh_server"
path = "src/lib.rs"

[[bin]]
name = "cast-mesh-server-bin"
path = "src/bin.rs"

[dependencies]
tonic = "0.2.1"
prost = "0.6.1"
tokio = { features = ["rt-threaded", "macros"]}
rocket = "0.4.2"
rocket_contrib =  "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.23.1"