[package]
name = "cast-mesh-server"
version = "0.1.0"
authors = ["tylerlowrey <contact@tylerlowrey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "cast-mesh-server-bin"
path = "src/bin.rs"

[dependencies]
tonic = "0.2.1"
prost = "0.6.1"
tokio = { features = ["rt-threaded", "macros"]}
rusqlite = "0.23.1"
reqwest = { version = "0.10.6", features = ["blocking"] }

[build-dependencies]
tonic-build = "0.2.0"