[package]
name = "cast-mesh-web-ui"
version = "0.1.0"
authors = ["tylerlowrey <contact@tylerlowrey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cast_mesh_ui_backend"
path = "src/lib.rs"

[[bin]]
name = "cast-mesh-ui-bin"
path = "src/main.rs"

[dependencies]
rocket = "0.4.2"
rocket_contrib =  "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.23.1"
reqwest = { version = "0.10.6", features = ["blocking"] }